fix:fix script history and add overflow-x

--- a/ui/search.css
+++ b/ui/search.css
@@ -20,7 +20,7 @@
   height: auto;
   display: flex;
   flex-wrap: nowrap;
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-y: hidden;
   scroll-behavior: smooth;
 
